# pe-parser

./: Cargo.toml
examples/: c_api.c  check.h  dumppe.rs
src/: dos.rs  enums.rs  lib.rs  parsers.rs  structures.rs
src/structures/: data_directory.rs  dos.rs  file_header.rs  optional_header.rs  pe.rs  section.rs
src/structures/data_directory/: import_descriptor.rs
