[package]
name = "pe"
version = "0.1.0"
authors = ["Thomas WACHE <thomas@wache.fr>"]
edition = "2021"

[lib]
name = "pe"
crate-type = ["staticlib", "dylib", "rlib"]

[dependencies]
enum-primitive-derive = "0.2"
num-traits = "0.2"
thiserror = "1"
libc = "0.2"
exe = { path = "../exe", version = "0.2" }
nom = "7"

[dev-dependencies]
clap = "3"
